--- a/src/app/components/navbar/contact/contact.component.html
+++ b/src/app/components/navbar/contact/contact.component.html
@@ -1,23 +1,21 @@
-<div class="container">
-  <form action="action_page.php">
-
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-    <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">India</option>
-      <option value="canada">Canada</option>
-      <option value="usa">USA</option>
-    </select>
-
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
-
-  </form>
+<div class="center">
+  <div class="row">
+    <div class="col-4"></div>
+    <div class="col-4">
+      <div class="card">
+          <div class="card-body" width="40rem" style="padding: 32px;">
+              <img src="https://i.pinimg.com/originals/de/92/d1/de92d1e5f97b6c65be5e5873b3bb4b91.jpg" width="300" height="300" alt="" style="width:100%">
+<hr>
+          <div class="container">
+            <h2 style="text-align:center;">Customer Support</h2>
+            <h6 class="title">Customer Help line</h6>
+            <P>Customer support</P>
+            <p>For any queries call/mail us on:</p>
+            <p>Email : groceryshop@gmail.COM</p>
+            <p>toll free Number : 00000/2222/55555<p>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
 </div>
